# suomichat

./: NOTES.md  README.md  REVIEW.md  program.md  pyproject.toml
.claude/skills/read-arxiv-paper/: SKILL.md
dev/: LEADERBOARD.md  LOG.md  gen_synthetic_data.py  repackage_data_reference.py
modal/: README.md  train.py
nebius/: README.md  suomichat.yaml  train.sh
runs/: miniseries.sh  runcpu.sh  scaling_laws.sh  speedrun.sh  suomichat.sh
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  gen_identity.py  lm_eval_wrapper.py  prepare_data.py  run_finbench.py  tok_eval.py  tok_train.py  tokenize_shards.py
suomichat/: checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  flash_attention.py  fp8.py  gpt.py  hardware.py  optim.py  report.py  tokenizer.py  ui.html
tasks/: common.py  customjson.py  humaneval.py  poro2_fi.py  spellingbee.py
tests/: test_attention_fallback.py  test_engine.py
web/: .gitignore  PERF_BATCH_PLAN.md  PERF_CMDBUF_PLAN.md  PERF_FUSED_PLAN.md  PERF_PLAN.md  PERF_RING_PLAN.md  PLAN.md  README.md  convert.py  export_tokenizer.py  index.html  runtime.js  server.py  test.html  test_runtime.py  tokenizer.js
web/shaders/: add.wgsl  argmax.wgsl  embedding.wgsl  embedding_batch.wgsl  embedding_state.wgsl  kv_append.wgsl  linear.wgsl  linear_m1.wgsl  matmul.wgsl  mlp_fused.wgsl  mul.wgsl  relu2.wgsl  rmsnorm.wgsl  rope.wgsl  scalar_mul.wgsl  sdpa_output.wgsl  sdpa_scores.wgsl  sigmoid.wgsl  smear_apply.wgsl  smear_apply_state.wgsl  smear_apply_t.wgsl  softcap.wgsl  softmax.wgsl  ve_apply.wgsl  ve_apply_t.wgsl
