[project]
name = "suomichat"
version = "0.1.0"
description = "Finnish LLM training harness — train a Finnish GPT from scratch on a single GPU. Fork of karpathy/nanochat."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]
# FIN-bench evaluation. Install with `uv sync --extra gpu --extra eval`.
# Pinned to a commit so reruns are reproducible; bump as the LumiOpen fork
# evolves and Finnish task definitions change.
eval = [
    "lm_eval @ git+https://github.com/LumiOpen/lm-evaluation-harness.git@6e0a60abb74cf098bc5511b25caf66566586f9f0",
]

[tool.uv]
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
